# SSQL

./: .gitignore  CMakeLists.txt  Cs Project  Database.txt  Funzioni strane che usiamo  README.md  afjdsajf.txt  ass.h  core.h  main.cpp  mysql.cpp  script.sql  syntax.h  utility.h
Classes/: core.h
Classes/Database/: Database.cpp  Database.h
Classes/Date/: Date.cpp  Date.h
Classes/Name/: Name.cpp  Name.h
Classes/Table/: Table.cpp  Table.h
Classes/Time/: Time.cpp  Time.h
input/: BIG_tests.sql  CHAR_tests.sql  DATE_tests.sql  INT_tests.sql  MISC_tests.sql  TEXT_tests.sql  TIME_tests.sql  big_test.sql
src/: CMakeLists.txt  Database.txt  ciao.txt  main.cpp  syntax.h  utility.h
src/Classes/Database/: Database.cpp  Database.h
src/Classes/Date/: Date.cpp  Date.h
src/Classes/Table/: Table.cpp  Table.h
src/Classes/Time/: Time.cpp  Time.h
test_files/: CHAR_tests.sql  CREATE_tests.sql  DATE_tests.sql  FLOAT_tests.sql  INT_tests.sql  MISC_tests.sql  TEXT_tests.sql  TIME_tests.sql  big_test.sql  script.sql
testjonathan/: customer.cpp  demo.cpp  test.cpp
tests/: Metaclass.cpp  Metaclass.h  Time.cpp  Time.h  test.cpp  test.txt  test2.cpp  test3.cpp
